--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,6 @@ authors = ["Irene Robles Rebollo <irenerobles93@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Pandas = "eadc2687-ae89-51f9-a5d9-86b5a6373a9c"
